fix: put equal link gaps on both sides

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1467,6 +1467,8 @@ html, body {
 /* Link buttons */
 .links {
   width: 100%;
+  padding: 0 16px;
+  box-sizing: border-box;
   margin-bottom: 16px;
 }
 
